Fixed text alignment on email signup button on actual device.

--- a/public/style/scss/main.scss
+++ b/public/style/scss/main.scss
@@ -909,6 +909,8 @@ footer {
       input.button {
         width: 100px;
         line-height: 20px;
+        text-align: center;
+        display: inline-block;
         &:hover {
           border: 1px solid $rose;
         }
